# c-standard-library

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/string/: CMakeLists.txt  strcat.c  strchr.c  strcmp.c  strcpy.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strrchr.c  strspn.c
src/string/include/: string.h
